--- a/Work/new-pattern/template.html
+++ b/Work/new-pattern/template.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="https://onsdigital.github.io/ons-pattern-library-starter/sixteens/css/ie-9.css">
     <![endif]-->
     <!--[if gt IE 9]><!-->
-    <link rel="stylesheet" type="text/css" href="https://onsdigital.github.io/ons-pattern-library-starter/sixteens/css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.ons.gov.uk/sixteens/1f354a7/css/main.css">
 	<![endif]-->
 
   </head>
@@ -22,8 +22,7 @@
           <div class="header col-wrap">
              <div class="col col--lg-one-third col--md-one-third">
                 <a href="/">
-                   <img class="main-logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v1/ons-logo.svg" alt="Office for National Statistics">
-                </a>
+                  <img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.svg" alt="Office for National Statistics">                </a>
              </div>
              <div class="col col--lg-two-thirds col--md-two-thirds print--hide">&nbsp;</div>
              <nav class="secondary-nav col col--lg-two-thirds col--md-two-thirds print--hide">
