--- a/Work/time-series/index.html
+++ b/Work/time-series/index.html
@@ -33,18 +33,25 @@
  </div>
 
 	<div class = "wrapper">
-		<h1>Find time series data by series ID
+		<h1>Find time series data by series ID </h1>
 			<h2>Enter CDID <input type="text" id="timeseriesInput" name="timeseries">
 					<button class = "btn btn--primary btn--thin" onclick = "getTimeseries()">Search</button> <button class="btn btn--secondary btn--thin" onclick="reset()">Reset</button>
+					<hr>
 			</h2>
-
-			<h2 id = "hidden" style =  "display:none">Choose from variations available:</h2>
+			<h3 id = "hidden" style =  "display:none">Choose from variations available:</h3>
 			<div class="btn-group" id = "variations">
 			</div>
-			<p id = "timeSeriesData">
-			<table id = "timeSeriesDataMonths"><h4 id = "hiddenTableMonths" style =  "display:none">Monthly data</h4></table>
-			<table id = "timeSeriesDataQuarters"><h4 id = "hiddenTableQuarters" style =  "display:none">Quarterly data</h4></table>
-			<table id = "timeSeriesDataYears"><h4 id = "hiddenTableYears" style =  "display:none">Yearly data</h4></table>
+			<h3 id = "timeSeriesData"></h3>
+				<div class="nav-secondary nav-secondary--border-right-lg col col--lg-one">
+					<ul class="nav-secondary__list">
+							<li class="nav-secondary__item" id = "hiddenTableMonths" style =  "display:none"><a href="#timeSeriesDataMonths" class="js-scroll">Monthly data</a></li>
+							<li class="nav-secondary__item" id = "hiddenTableQuarters" style =  "display:none"><a href="#timeSeriesDataQuarters" class="js-scroll" >Quarterly data</a></li>
+							<li class="nav-secondary__item" id = "hiddenTableYears" style =  "display:none"><a href="#timeSeriesDataYears" class="js-scroll">Yearly data</a></li>
+					</ul>
+			</div>
+				<table id = "timeSeriesDataMonths"></table><br>
+				<table id = "timeSeriesDataQuarters"></table><br>
+				<table id = "timeSeriesDataYears"></table><br>
 			</p>
 	</div>
 
@@ -55,11 +62,11 @@
 						<div class="footer-license">
 								<img class="footer-license__img" alt="OGL" width="60" src="https://www.ons.gov.uk/img/ogl.png">
 								<p class="footer-license__text margin-left-sm--0">
-										All content is available under the <a class="icon--hide" href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a> <span class="icon icon-external--light-small"></span>, except where otherwise stated
-						</p>
+										All content is available under the <a class="icon--hide" href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a>, except where otherwise stated
+								</p>
+						</div>
 				</div>
 		</div>
-	</div>
 	</footer>
 
 <script>
@@ -87,93 +94,90 @@
 		//var timeseries = "abmi"
 		function getTimeseries() {
 			timeseries = document.getElementById("timeseriesInput").value;
-				fetch( api + timeseries , {mode: 'cors'} )
-				.then(data => data.json())
-				.then(function(data) {
-					//console.log(data)
-					let showButtons = data.totalItems;
-					//console.log(showButtons);
-					let variations = data.items;
-					//console.log(variations)
-
-					return variations.map(function(variations){
-						if (showButtons > 1){
-							tsd.style.display = 'block';
-									let button = createNode('button'),
-											span = createNode('span');
-									button.name = variations.description.datasetId;
-									button.onclick = buttonClick;
-									//console.log(button)
-									span.innerHTML = variations.description.datasetId;
-									append(button, span);
-									append(tsd, button);
-
-									button.classList.add("btn");
-									button.classList.add("btn--primary");
-									button.classList.add("btn--thin");
-									hidden.style.display = 'block';
-									}
-								 else {
-									fetch (api + timeseries + "/dataset/"+ variations.description.datasetId + "/data", {mode: 'cors'} )
-									.then(data => data.json())
-									.then(function (data) {
-										let timeSeriesData = data.description;
-											let h3 = createNode('h3');
-													p = createNode('p');
-											h3.innerHTML = timeSeriesData.title + " (" +  timeSeriesData.cdid + ")" ;
-											p.innerHTML = "Dataset ID: " + timeSeriesData.datasetId;
-											append(h3, p);
-											append(ts, h3);
-										let timeSeriesDataMonths = data.months;
-										if (data.months.length > 0){
-											hiddenTableMonths.style.display = 'block';
-											timeSeriesDataMonths.map(function(timeSeriesDataMonths){
-												let tr1 = createNode('tr');
-												tr1.innerHTML = "<td>" + timeSeriesDataMonths.date + "</td><td>" + timeSeriesDataMonths.value + "</td>";
-												append(tsdm, tr1);
-											});
+				if (timeseries.length < 4 || timeseries.length > 5) {
+					sweetAlert("Incorrect ID", "Please enter a valid time series identifier");
+					} else {
+					fetch( api + timeseries , {mode: 'cors'} )
+					.then(data => data.json())
+					.then(function(data) {
+						let showButtons = data.totalItems;
+						let variations = data.items;
+						return variations.map(function(variations){
+							if (showButtons > 1){
+								tsd.style.display = 'block';
+										let button = createNode('button'),
+												span = createNode('span');
+										button.name = variations.description.datasetId;
+										button.onclick = buttonClick;
+										span.innerHTML = variations.description.datasetId;
+										append(button, span);
+										append(tsd, button);
+										button.classList.add("btn");
+										button.classList.add("btn--primary");
+										button.classList.add("btn--thin");
+										hidden.style.display = 'block';
 										}
-										if (data.quarters.length > 0){
-											hiddenTableQuarters.style.display = 'block';
-											let timeSeriesDataQuarters = data.quarters;
-											timeSeriesDataQuarters.map(function(timeSeriesDataQuarters){
-												let tr2 = createNode('tr');
-												tr2.innerHTML = "<td>" + timeSeriesDataQuarters.date + "</td><td>" + timeSeriesDataQuarters.value + "</td>";
-												append(tsdq, tr2);
-											});
-										}
-										if (data.years.length > 0){
-											hiddenTableYears.style.display = 'block';
-											let timeSeriesDataYears = data.years;
-											timeSeriesDataYears.map(function(timeSeriesDataYears){
-												let tr3 = createNode('tr');
-												tr3.innerHTML = "<td>" + timeSeriesDataYears.date + "</td><td>" + timeSeriesDataYears.value + "</td>";
-												append(tsdy, tr3);
-											})
-										}
+									 else {
+										fetch (api + timeseries + "/dataset/"+ variations.description.datasetId + "/data", {mode: 'cors'} )
+										.then(data => data.json())
+										.then(function (data) {
+											let timeSeriesData = data.description;
+												let p = createNode('p');
+												ts.innerHTML = timeSeriesData.title + " (" +  timeSeriesData.cdid + ")" ;
+												p.innerHTML = "Dataset ID: " + timeSeriesData.datasetId;
+												//append(h3, p);
+												append(ts, p);
+											let timeSeriesDataMonths = data.months;
+											if (data.months.length > 0){
+												hiddenTableMonths.style.display = '';
+												timeSeriesDataMonths.map(function(timeSeriesDataMonths){
+													let tr1 = createNode('tr');
+													tr1.innerHTML = "<td>" + timeSeriesDataMonths.date + "</td><td>" + timeSeriesDataMonths.value + "</td>";
+													append(tsdm, tr1);
+												});
+											}
+											if (data.quarters.length > 0){
+												hiddenTableQuarters.style.display = '';
+												let timeSeriesDataQuarters = data.quarters;
+												timeSeriesDataQuarters.map(function(timeSeriesDataQuarters){
+													let tr2 = createNode('tr');
+													tr2.innerHTML = "<td>" + timeSeriesDataQuarters.date + "</td><td>" + timeSeriesDataQuarters.value + "</td>";
+													append(tsdq, tr2);
+												});
+											}
+											if (data.years.length > 0){
+												hiddenTableYears.style.display = '';
+												let timeSeriesDataYears = data.years;
+												timeSeriesDataYears.map(function(timeSeriesDataYears){
+													let tr3 = createNode('tr');
+													tr3.innerHTML = "<td>" + timeSeriesDataYears.date + "</td><td>" + timeSeriesDataYears.value + "</td>";
+													append(tsdy, tr3);
+												})
+											}
 									})
 								}
 							})
 						})
 					 .catch(function(error) {
-						 alert (error)
+						 sweetAlert("Incorrect ID", "Please enter a valid time series identifier");
+						 console.log(error)
 				});
-				//closing tag for function getTimeseries()
+			}
 			}
 
 			function buttonClick() {
-
 				fetch (api + timeseries + "/dataset/"+ this.name + "/data", {mode: 'cors'} )
 				.then(data => data.json())
 				.then(function (data) {
-					//console.log(test)
 					let timeSeriesData = data.description;
-						let h2 = createNode('h2');
-						h2.innerHTML = timeSeriesData.title + " (" +  timeSeriesData.cdid + ")" ;
-						append(ts, h2);
+						let p = createNode('p');
+						ts.innerHTML = timeSeriesData.title + " (" +  timeSeriesData.cdid + ")" ;
+						p.innerHTML = "Dataset ID: " + timeSeriesData.datasetId;
+						//append(h3, p);
+						append(ts, p);
 					let timeSeriesDataMonths = data.months;
 					if (data.months.length > 0){
-						hiddenTableMonths.style.display = 'block';
+						hiddenTableMonths.style.display = '';
 						timeSeriesDataMonths.map(function(timeSeriesDataMonths){
 							let tr1 = createNode('tr');
 							tr1.innerHTML = "<td>" + timeSeriesDataMonths.date + "</td><td>" + timeSeriesDataMonths.value + "</td>";
@@ -181,7 +185,7 @@
 						});
 					}
 					if (data.quarters.length > 0){
-						hiddenTableQuarters.style.display = 'block';
+						hiddenTableQuarters.style.display = '';
 						let timeSeriesDataQuarters = data.quarters;
 						timeSeriesDataQuarters.map(function(timeSeriesDataQuarters){
 							let tr2 = createNode('tr');
@@ -190,7 +194,7 @@
 						});
 					}
 					if (data.years.length > 0){
-						hiddenTableYears.style.display = 'block';
+						hiddenTableYears.style.display = '';
 						let timeSeriesDataYears = data.years;
 						timeSeriesDataYears.map(function(timeSeriesDataYears){
 							let tr3 = createNode('tr');
@@ -205,8 +209,9 @@
 				location.reload();
 			}
 
-
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
 
 </body>
 </html>
