--- a/Work/time-series/index.html
+++ b/Work/time-series/index.html
@@ -6,6 +6,12 @@
 	</head>
 
 	<body>
+
+	<div class="beta-banner">
+    <div class="wrapper">
+      <p><span class="font-size--16"><strong style="padding: 2px 7px 3px;text-transform: uppercase;color: #fff; background-color: #323132;">Warning</strong> this is a prototype and the content may not be complete or accurate</span></p>
+    </div>
+  </div>
 	<nav>
 		 <div class="wrapper">
 				<div class="header col-wrap">
@@ -17,7 +23,7 @@
 					 <nav class="secondary-nav col col--lg-two-thirds col--md-two-thirds print--hide">
 							<ul class="secondary-nav__list">
 								 <li class="secondary-nav__item">
-										<a class="secondary-nav__link" href="http://developer.ons.gov.uk">Developer hub</a>
+										<a class="secondary-nav__link" href="http://developer.ons.gov.uk">Developer hub (beta)</a>
 								 </li>
 							</ul>
 					 </nav>
