--- a/Work/time-series/index.html
+++ b/Work/time-series/index.html
@@ -42,6 +42,7 @@
 		<h1>Find time series data by series ID </h1>
 			<h2>Enter CDID <input type="text" id="timeseriesInput" name="timeseries">
 					<button class = "btn btn--primary btn--thin" onclick = "getTimeseries()">Search</button> <button class="btn btn--secondary btn--thin" onclick="reset()">Reset</button>
+						<p>For example; CHAW, ABMI, UKPOP</p>
 					<hr>
 			</h2>
 			<h3 id = "hidden" style =  "display:none">Choose from variations available:</h3>
