--- a/Work/new-pattern/template.html
+++ b/Work/new-pattern/template.html
@@ -21,22 +21,27 @@
        <div class="wrapper">
           <div class="header col-wrap">
              <div class="col col--lg-one-third col--md-one-third">
-                <a href="/">
+                <a href="https://www.ons.gov.uk/">
                   <img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.svg" alt="Office for National Statistics">                </a>
              </div>
              <div class="col col--lg-two-thirds col--md-two-thirds print--hide">&nbsp;</div>
-             <nav class="secondary-nav col col--lg-two-thirds col--md-two-thirds print--hide">
-                <ul class="secondary-nav__list">
-                   <li class="secondary-nav__item">
-                      <a class="secondary-nav__link" href="/methodology">Methodology</a>
-                   </li>
-                   <li class="secondary-nav__item">
-                      <a class="secondary-nav__link" href="/aboutus">
-                         About
-                      </a>
-                   </li>
-                </ul>
-             </nav>
+             <ul class="secondary-nav__list js-nav-clone__list">
+<li class="secondary-nav__item">
+<a class="secondary-nav__link  js-nav-clone__link" href="/releasecalendar">Release calendar</a>
+</li>
+<li class="secondary-nav__item">
+<a class="secondary-nav__link  js-nav-clone__link" href="/methodology">Methodology</a>
+</li>
+<li class="secondary-nav__item">
+<a class="secondary-nav__link  js-nav-clone__link" href="/news">Media</a>
+</li>
+<li class="secondary-nav__item">
+<a class="secondary-nav__link  js-nav-clone__link" href="/aboutus">About</a>
+</li>
+<li class="secondary-nav__item">
+<a class="secondary-nav__link js-nav-clone__link" rel="noopener noreferrer" href="https://blog.ons.gov.uk/">Blog</a>
+</li>
+</ul>
           </div>
        </div>
     </nav>
@@ -56,65 +61,65 @@
           </ul>
           <div class="wrapper nav-main--hidden" id="nav-primary">
              <ul class="primary-nav__list">
-                <li class="primary-nav__item js-nav hide--mobile old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="/">Home</a></li>
+                <li class="primary-nav__item js-nav hide--mobile old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="https://www.ons.gov.uk/">Home</a></li>
                 <li class="primary-nav__item js-nav js-expandable ">
-                   <a class="primary-nav__link col col--md-8 col--lg-10" href="/businessindustryandtrade" aria-haspopup="true">Business, industry and trade</a>
+                   <a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/businessindustryandtrade" aria-haspopup="true">Business, industry and trade</a>
                    <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/business" >Business</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/business" >Business</a>
                       </li>
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/changestobusiness" >Changes to business</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/changestobusiness" >Changes to business</a>
                       </li>
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/constructionindustry" >Construction industry</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/constructionindustry" >Construction industry</a>
                       </li>
                    </ul>
                 </li>
                 <li class="primary-nav__item js-nav js-expandable ">
-                   <a class="primary-nav__link col col--md-8 col--lg-10" href="/economy" aria-haspopup="true">Economy</a>
+                   <a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/economy" aria-haspopup="true">Economy</a>
                    <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/economy/economicoutputandproductivity" >Economic output and productivity</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/economicoutputandproductivity" >Economic output and productivity</a>
                       </li>
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/economy/environmentalaccounts" >Environmental accounts</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/environmentalaccounts" >Environmental accounts</a>
                       </li>
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/economy/governmentpublicsectorandtaxes" >Government, public sector and taxes</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/governmentpublicsectorandtaxes" >Government, public sector and taxes</a>
                       </li>
                    </ul>
                 </li>
                 <li class="primary-nav__item js-nav js-expandable ">
-                   <a class="primary-nav__link col col--md-8 col--lg-10" href="/employmentandlabourmarket" aria-haspopup="true">Employment and labour market</a>
+                   <a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/employmentandlabourmarket" aria-haspopup="true">Employment and labour market</a>
                    <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/employmentandlabourmarket/peopleinwork" >People in work</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork" >People in work</a>
                       </li>
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/employmentandlabourmarket/peoplenotinwork" >People not in work</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork" >People not in work</a>
                       </li>
                    </ul>
                 </li>
                 <li class="primary-nav__item js-nav js-expandable ">
-                   <a class="primary-nav__link col col--md-8 col--lg-10" href="/peoplepopulationandcommunity" aria-haspopup="true">People, population and community</a>
+                   <a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/peoplepopulationandcommunity" aria-haspopup="true">People, population and community</a>
                    <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/birthsdeathsandmarriages" >Births, deaths and marriages</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages" >Births, deaths and marriages</a>
                       </li>
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/community" >Community</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/community" >Community</a>
                       </li>
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/crimeandjustice" >Crime and justice</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice" >Crime and justice</a>
                       </li>
                       <li class="primary-nav__child-item  js-expandable__child">
-                         <a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/culturalidentity" >Cultural identity</a>
+                         <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/culturalidentity" >Cultural identity</a>
                       </li>
                    </ul>
                 </li>
                 <li class="primary-nav__item  js-nav">
-                   <a class="primary-nav__link  col col--md-8 col--lg-10" href="/surveys">
+                   <a class="primary-nav__link  col col--md-8 col--lg-10" href="https://www.ons.gov.uk/surveys">
                       Taking part in a survey?
                    </a>
                 </li>
@@ -158,13 +163,13 @@
                             <h3 class="footer-nav__heading">Help</h3>
                             <ul class="footer-nav__list">
                                 <li class="footer-nav__item">
-                                    <a href="/help/accessibility">Accessibility</a>
+                                    <a href="https://www.ons.gov.uk/help/accessibility">Accessibility</a>
                                 </li>
                                 <li class="footer-nav__item">
-                                    <a href="/help/cookiesandprivacy">Cookies and privacy</a>
+                                    <a href="https://www.ons.gov.uk/help/cookiesandprivacy">Cookies and privacy</a>
                                 </li>
                                 <li class="footer-nav__item">
-                                    <a href="/help/termsandconditions">Terms and conditions</a>
+                                    <a href="https://www.ons.gov.uk/help/termsandconditions">Terms and conditions</a>
                                 </li>
                             </ul>
                         </div>
@@ -172,19 +177,19 @@
                             <h3 class="footer-nav__heading">About ONS</h3>
                             <ul class="footer-nav__list">
                                 <li class="footer-nav__item">
-                                    <a href="/aboutus/whatwedo">What we do</a>
+                                    <a href="https://www.ons.gov.uk/aboutus/whatwedo">What we do</a>
                                 </li>
                                 <li class="footer-nav__item">
-                                    <a href="/aboutus/careers">Careers</a>
+                                    <a href="https://www.ons.gov.uk/aboutus/careers">Careers</a>
                                 </li>
                                 <li class="footer-nav__item">
-                                    <a href="/aboutus/contactus">Contact us</a>
+                                    <a href="https://www.ons.gov.uk/aboutus/contactus">Contact us</a>
                                 </li>
                                 <li class="footer-nav__item">
-                                    <a href="/news">News</a>
+                                    <a href="https://www.ons.gov.uk/news">News</a>
                                 </li>
                                 <li class="footer-nav__item">
-                                    <a href="/aboutus/transparencyandgovernance/freedomofinformationfoi">Freedom of Information</a>
+                                    <a href="https://www.ons.gov.uk/aboutus/transparencyandgovernance/freedomofinformationfoi">Freedom of Information</a>
                                 </li>
                             </ul>
                         </div>
@@ -212,7 +217,7 @@
                 <div class="footer-license">
                     <img class="footer-license__img" alt="OGL" width="60" src="https://www.ons.gov.uk/img/ogl.png">
                     <p class="footer-license__text margin-left-sm--0">
-                        All content is available under the <a class="icon--hide" href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a> <span class="icon icon-external--light-small"></span>, except where otherwise stated
+                        All content is available under the <a class="icon--hide" href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a>, except where otherwise stated
                 </p>
             </div>
         </div>
@@ -220,6 +225,7 @@
  </footer>
   </body>
 
-  <script src="https://onsdigital.github.io/ons-pattern-library-starter/sixteens/js/main.js"> </script>
+<script type="text/javascript" src="//cdn.ons.gov.uk/sixteens/831f6bb/js/main.js"></script>
+<script type="text/javascript" src="https://www.ons.gov.uk/js/app.js"></script>
 
 </html>
