--- a/Dashboards/index.html
+++ b/Dashboards/index.html
@@ -153,7 +153,7 @@ Skip to main content
 </ul>
 <div class="wrapper nav-main--hidden" id="nav-primary">
 <ul class="primary-nav__list">
-<li class="primary-nav__item primary-nav__item--active js-nav hide--sm old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="/">Home</a></li>
+<li class="primary-nav__item primary-nav__item--active js-nav hide--sm old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="./">Home</a></li>
 <li class="primary-nav__item js-nav js-expandable ">
 <a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/businessindustryandtrade" aria-haspopup="true">Business, industry and trade</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
@@ -185,7 +185,7 @@ Skip to main content
 </ul>
 </li>
 <li class="primary-nav__item js-nav js-expandable ">
-<a class="primary-nav__link col col--md-8 col--lg-10" href="/economy" aria-haspopup="true">Economy</a>
+<a class="primary-nav__link col col--md-8 col--lg-10" href="./economy" aria-haspopup="true">Economy</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
 <li class="primary-nav__child-item  js-expandable__child">
 <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/economicoutputandproductivity">Economic output and productivity</a>
@@ -203,7 +203,7 @@ Skip to main content
 <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/grossvalueaddedgva">Gross Value Added (GVA)</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/inflationandpriceindices">Inflation and price indices</a>
+<a class="primary-nav__child-link" tabindex="-1" href="./economy/inflationandpriceindices">Inflation and price indices</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
 <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/investmentspensionsandtrusts">Investments, pensions and trusts</a>
@@ -282,7 +282,7 @@ Taking part in a survey?
 </div>
 <div class="search nav-search--hidden print--hide" id="searchBar">
 <div class="wrapper" role="search">
-<form class="col-wrap search__form" action="/search.html">
+<form class="col-wrap search__form" action="./search.html">
 <label class="search__label col col--md-23 col--lg-24" for="nav-search">Search for a keyword(s) or time series ID</label>
 <input type="search" autocomplete="off" class="search__input col col--md-21 col--lg-32" id="nav-search" name="q" value="">
 <button type="submit" class="search__button col--md-3 col--lg-3" id="nav-search-submit">
@@ -422,7 +422,7 @@ The UK&#x27;s largest independent producer of official statistics and the recogn
 <div class="col height-sm--23 col--md-23 col--lg-14 height--23 background--white margin-left-md--1 margin-bottom--2 js-hover-click">
 <div class="padding-left--1 padding-right--1 padding-top--2 padding-bottom--2">
 <div class="box__content box__content--homepage">
-<h2 class="tiles__title-h2--home"><a href="/keyfigures">Key figures</a></h2>
+<h2 class="tiles__title-h2--home"><a href="./keyfigures">Key figures</a></h2>
 <p class="margin-top--1">Most important figures produced by ONS all in one place</p>
 </div>
 </div>
