update root links

--- a/Dashboards/economy/inflationandpriceindices/index.html
+++ b/Dashboards/economy/inflationandpriceindices/index.html
@@ -183,7 +183,7 @@ Skip to main content
 </ul>
 </li>
 <li class="primary-nav__item js-nav js-expandable primary-nav__item--active">
-<a class="primary-nav__link col col--md-8 col--lg-10" href="/economy" aria-haspopup="true">Economy</a>
+<a class="primary-nav__link col col--md-8 col--lg-10" href="./economy" aria-haspopup="true">Economy</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
 <li class="primary-nav__child-item  js-expandable__child">
 <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/economicoutputandproductivity">Economic output and productivity</a>
@@ -201,7 +201,7 @@ Skip to main content
 <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/grossvalueaddedgva">Gross Value Added (GVA)</a>
 </li>
 <li class="primary-nav__child-item primary-nav__child-item--active js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/inflationandpriceindices">Inflation and price indices</a>
+<a class="primary-nav__child-link" tabindex="-1" href="./economy/inflationandpriceindices">Inflation and price indices</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
 <a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/investmentspensionsandtrusts">Investments, pensions and trusts</a>
@@ -280,7 +280,7 @@ Taking part in a survey?
 </div>
 <div class="search nav-search--hidden print--hide" id="searchBar">
 <div class="wrapper" role="search">
-<form class="col-wrap search__form" action="/search.html">
+<form class="col-wrap search__form" action="./search.html">
 <label class="search__label col col--md-23 col--lg-24" for="nav-search">Search for a keyword(s) or time series ID</label>
 <input type="search" autocomplete="off" class="search__input col col--md-21 col--lg-32" id="nav-search" name="q" value="">
 <button type="submit" class="search__button col--md-3 col--lg-3" id="nav-search-submit">
@@ -300,10 +300,10 @@ Taking part in a survey?
 <div class="breadcrumb print--hide">
 <ol class="breadcrumb__list">
 <li class="breadcrumb__item">
-<a class="breadcrumb__link" href="/">Home</a>
+<a class="breadcrumb__link" href="./">Home</a>
 </li>
 <li class="breadcrumb__item">
-<a class="breadcrumb__link" href="/economy">Economy</a>
+<a class="breadcrumb__link" href="./economy">Economy</a>
 </li>
 <li class="breadcrumb__item">
 Inflation and price indices
