--- a/Dashboards/search.html
+++ b/Dashboards/search.html
@@ -76,7 +76,7 @@ Skip to main content
 <div class="wrapper">
 <div class="header col-wrap">
 <div class="col col--lg-one-third col--md-one-third">
-<a href="https://www.ons.gov.uk/">
+<a href="./">
 <!--[if lte IE 8]>
 							<img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.png" alt="Office for National Statistics">
 						<![endif]-->
@@ -118,16 +118,16 @@ Skip to main content
 <div class="secondary-nav col col--lg-two-thirds col--md-two-thirds print--hide">
 <ul class="secondary-nav__list js-nav-clone__list">
 <li class="secondary-nav__item">
-<a class="secondary-nav__link  js-nav-clone__link" href="/releasecalendar">Release calendar</a>
+<a class="secondary-nav__link  js-nav-clone__link" href="https://www.ons.gov.uk/releasecalendar">Release calendar</a>
 </li>
 <li class="secondary-nav__item">
-<a class="secondary-nav__link  js-nav-clone__link" href="/methodology">Methodology</a>
+<a class="secondary-nav__link  js-nav-clone__link" href="https://www.ons.gov.uk/methodology">Methodology</a>
 </li>
 <li class="secondary-nav__item">
-<a class="secondary-nav__link  js-nav-clone__link" href="/news">Media</a>
+<a class="secondary-nav__link  js-nav-clone__link" href="https://www.ons.gov.uk/news">Media</a>
 </li>
 <li class="secondary-nav__item">
-<a class="secondary-nav__link  js-nav-clone__link" href="/aboutus">About</a>
+<a class="secondary-nav__link  js-nav-clone__link" href="https://www.ons.gov.uk/aboutus">About</a>
 </li>
 <li class="secondary-nav__item">
 <a class="secondary-nav__link js-nav-clone__link" rel="noopener noreferrer" href="https://blog.ons.gov.uk/">Blog</a>
@@ -154,125 +154,125 @@ Skip to main content
 </ul>
 <div class="wrapper nav-main--hidden" id="nav-primary">
 <ul class="primary-nav__list">
-<li class="primary-nav__item  js-nav hide--sm old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="/">Home</a></li>
+<li class="primary-nav__item  js-nav hide--sm old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="./">Home</a></li>
 <li class="primary-nav__item js-nav js-expandable ">
-<a class="primary-nav__link col col--md-8 col--lg-10" href="/businessindustryandtrade" aria-haspopup="true">Business, industry and trade</a>
+<a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/businessindustryandtrade" aria-haspopup="true">Business, industry and trade</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/business">Business</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/business">Business</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/changestobusiness">Changes to business</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/changestobusiness">Changes to business</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/constructionindustry">Construction industry</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/constructionindustry">Construction industry</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/itandinternetindustry">IT and internet industry</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/itandinternetindustry">IT and internet industry</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/internationaltrade">International trade</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/internationaltrade">International trade</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/manufacturingandproductionindustry">Manufacturing and production industry</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/manufacturingandproductionindustry">Manufacturing and production industry</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/retailindustry">Retail industry</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry">Retail industry</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/businessindustryandtrade/tourismindustry">Tourism industry</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/businessindustryandtrade/tourismindustry">Tourism industry</a>
 </li>
 </ul>
 </li>
 <li class="primary-nav__item js-nav js-expandable ">
-<a class="primary-nav__link col col--md-8 col--lg-10" href="/economy" aria-haspopup="true">Economy</a>
+<a class="primary-nav__link col col--md-8 col--lg-10" href="./economy" aria-haspopup="true">Economy</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/economicoutputandproductivity">Economic output and productivity</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/economicoutputandproductivity">Economic output and productivity</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/environmentalaccounts">Environmental accounts</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/environmentalaccounts">Environmental accounts</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/governmentpublicsectorandtaxes">Government, public sector and taxes</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/governmentpublicsectorandtaxes">Government, public sector and taxes</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/grossdomesticproductgdp">Gross Domestic Product (GDP)</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/grossdomesticproductgdp">Gross Domestic Product (GDP)</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/grossvalueaddedgva">Gross Value Added (GVA)</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/grossvalueaddedgva">Gross Value Added (GVA)</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/inflationandpriceindices">Inflation and price indices</a>
+<a class="primary-nav__child-link" tabindex="-1" href="./economy/inflationandpriceindices">Inflation and price indices</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/investmentspensionsandtrusts">Investments, pensions and trusts</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/investmentspensionsandtrusts">Investments, pensions and trusts</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/nationalaccounts">National accounts</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/nationalaccounts">National accounts</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/economy/regionalaccounts">Regional accounts</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/economy/regionalaccounts">Regional accounts</a>
 </li>
 </ul>
 </li>
 <li class="primary-nav__item js-nav js-expandable ">
-<a class="primary-nav__link col col--md-8 col--lg-10" href="/employmentandlabourmarket" aria-haspopup="true">Employment and labour market</a>
+<a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/employmentandlabourmarket" aria-haspopup="true">Employment and labour market</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/employmentandlabourmarket/peopleinwork">People in work</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork">People in work</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/employmentandlabourmarket/peoplenotinwork">People not in work</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork">People not in work</a>
 </li>
 </ul>
 </li>
 <li class="primary-nav__item js-nav js-expandable ">
-<a class="primary-nav__link col col--md-8 col--lg-10" href="/peoplepopulationandcommunity" aria-haspopup="true">People, population and community</a>
+<a class="primary-nav__link col col--md-8 col--lg-10" href="https://www.ons.gov.uk/peoplepopulationandcommunity" aria-haspopup="true">People, population and community</a>
 <ul class="primary-nav__child-list col col--md-16 col--lg-20 js-expandable__content js-nav-hidden jsEnhance" aria-expanded="false" aria-label="submenu">
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/birthsdeathsandmarriages">Births, deaths and marriages</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages">Births, deaths and marriages</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/crimeandjustice">Crime and justice</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice">Crime and justice</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/culturalidentity">Cultural identity</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/culturalidentity">Cultural identity</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/educationandchildcare">Education and childcare</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/educationandchildcare">Education and childcare</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/elections">Elections</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/elections">Elections</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/healthandsocialcare">Health and social care</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/healthandsocialcare">Health and social care</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/householdcharacteristics">Household characteristics</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/householdcharacteristics">Household characteristics</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/housing">Housing</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/housing">Housing</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/leisureandtourism">Leisure and tourism</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/leisureandtourism">Leisure and tourism</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/personalandhouseholdfinances">Personal and household finances</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/personalandhouseholdfinances">Personal and household finances</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/populationandmigration">Population and migration</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration">Population and migration</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/wellbeing">Well-being</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/wellbeing">Well-being</a>
 </li>
 <li class="primary-nav__child-item  js-expandable__child">
-<a class="primary-nav__child-link" tabindex="-1" href="/peoplepopulationandcommunity/cuturalidentity">cuturalidentity</a>
+<a class="primary-nav__child-link" tabindex="-1" href="https://www.ons.gov.uk/peoplepopulationandcommunity/cuturalidentity">cuturalidentity</a>
 </li>
 </ul>
 </li>
 <li class="primary-nav__item  js-nav">
-<a class="primary-nav__link  col col--md-8 col--lg-10" href="/surveys">
+<a class="primary-nav__link  col col--md-8 col--lg-10" href="https://www.ons.gov.uk/surveys">
 Taking part in a survey?
 </a>
 </li>
@@ -284,7 +284,7 @@ Taking part in a survey?
 </div>
 <div class="search search--results-page print--hide" id="searchBar">
 <div class="wrapper">
-<form class="col-wrap search__form" action="/search.html">
+<form class="col-wrap search__form" action="./search.html">
 <h1>Search our website</h1>
 <label class="font-size--16 block" for="nav-search">Keyword(s) or time series ID</label>
 <input type="search" autocomplete="off" class="search__input search__input--results-page col col--md-29 col--lg-29" id="nav-search" name="q" value="">
@@ -447,7 +447,7 @@ Refine results not available on this prototype
                 </div>
                 <div class="col col--md-17 col--lg-20 height--31-indented-ellipsis background--mercury">
                 <div class="min-height--10 background--gallery padding-top--2 padding-left--1 padding-right--1">
-                <h3 class="flush"><a href="/keyfigures/economy/inflationandpriceindices">Dashboard: Inflation and price indices<span class="box__clickable"></span></a></h3>
+                <h3 class="flush"><a href="https://www.ons.gov.uk/keyfigures/economy/inflationandpriceindices">Dashboard: Inflation and price indices<span class="box__clickable"></span></a></h3>
                 </div>
                 <div class="box__content padding-top--1 padding-right--1 padding-bottom--1 padding-left--1 border-top--iron-sm border-top--iron-md">
                 <p>The rate of increase in prices for goods and services. Measures of <strong>inflation</strong> and prices include consumer price <strong>inflation</strong>, producer price <strong>inflation</strong>, the house price index, index of private housing rental prices, and construction output price indices. </p>
